Feature: implement date range report and update swagger documentation
